--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    // 指定全局组件类型
+    "types": ["element-plus/global"]
+  }
 }
