--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "1.4.0",
+    "deepmerge": "4.3.1",
     "element-plus": "2.3.7",
     "pinia": "2.1.3",
     "vue": "3.3.4",
