--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "1.4.0",
     "deepmerge": "4.3.1",
     "element-plus": "2.3.7",
+    "js-cookie": "3.0.5",
     "pinia": "2.1.3",
     "vue": "3.3.4",
     "vue-router": "4.2.2"
