--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,18 @@
     }
   ],
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     // 指定全局组件类型
-    "types": ["element-plus/global", "vite/client"],
+    "types": ["element-plus/global", "vite/client","pinia-plugin-persist"],
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
       "#/*": ["types/*"]
-  }
+  },
+  "allowSyntheticDefaultImports": true /* 允许默认导入 */
   },
   "include": [
     "src/**/*.ts",
