--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,9 @@
+
+# 开发环境配置
+ENV = 'development'
 VITE_APP_BASE_API = '/admin'
+# 路由懒加载
+VITE_CLI_BABEL_TRANSPILE_MODULES = true
+
+VITE_APP_BASE_IM = 'https://tkjim.yijiesudai.com'
+VITE_APP_BASE_H5 = 'https://tkjgw.yijiesudai.com'
