--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     }
   ],
   "compilerOptions": {
+    "allowJs": true,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
